--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -16,7 +16,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    padding: 1em;
+    padding: 0.8em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -25,6 +25,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     font-family: $serif;
+	font-weight: bold;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
