--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -25,6 +25,24 @@
   }
 }
 
+/*404search*/
+.search__togglesss {
+  margin-left: 0rem;
+  margin-right: 1rem;
+  height: $nav-toggle-height;
+  border: 0;
+  outline: none;
+  color: $primary-color;
+  background-color: transparent;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+
+  &:hover {
+    color: mix(#000, $primary-color, 25%);
+  }
+}
+
 .search-icon {
   width: 100%;
   height: 100%;
@@ -35,18 +53,24 @@
   visibility: hidden;
   padding-top: 1em;
   padding-bottom: 1em;
+ 
 
   &__inner-wrap {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding-left: 1em;
+	  &__404 {
+	    padding-left: 0em;
+		}
     padding-right: 1em;
+	
     -webkit-animation: $intro-transition;
     animation: $intro-transition;
     -webkit-animation-delay: 0.15s;
     animation-delay: 0.15s;
-
+    
+	
     @include breakpoint($x-large) {
       max-width: $max-width;
     }
@@ -55,6 +79,10 @@
 
   &__form {
     background-color: transparent;
+	  
+	  &__404 {
+	    background-color: #C9ECFC;
+		}
   }
 
   .search-input {
@@ -66,6 +94,16 @@
     box-shadow: none;
     background-color: transparent;
     font-size: $type-size-3;
+	  &__404 {
+	    display: block;
+        margin-bottom: 0;
+        padding: 0;
+        border: none;
+        outline: none;
+	    font-size: $type-size-5;
+		background-color: #C9ECFC;
+		box-shadow: none;
+		}
 
     @include breakpoint($large) {
       font-size: $type-size-2;
